fix shift width

--- a/src/components/key/_key.scss
+++ b/src/components/key/_key.scss
@@ -52,5 +52,5 @@
 }
 
 .key[data-code='ShiftLeft'] {
-  min-width: 13.5rem
+  min-width: 15rem
 }
